# zig-proxy

./: .gitignore  LICENSE-APACHE.txt  LICENSE-MIT.txt  LICENSE.txt  README.md  architecture.md  build.zig  build.zig.zon  check-redis.sh  check-tls.sh  check.sh  create-aggdevice.sh  create-enddevice.sh  dcap.sh  debug-http.sh  get_subscription.sh  lfdi-sfdi.sh  list-devices.sh  mup.sh  server.py  sub.sh  sub1.sh  test_device_mapping.sh  uv_size.c  xxx.sh
config/: server.toml  test-http.toml
ieee2030-backend/: Cargo.toml
ieee2030-backend/src/: main.rs
src/: config.zig  connection.zig  connection_pool.zig  http.zig  logger.zig  main.zig  observability.zig  proxy.zig  request_logger.zig  test_http_parser.zig  upstream.zig  xml_parser.zig
src/core/: arena.zig  context.zig  http_parser.zig  jemalloc.zig  types.zig
src/mtls/: certificate.zig  session_cache.zig  session_manager.zig  tls.zig  validation.zig
src/utils/: buffer_pool.zig  libxml2.zig  openssl.zig  refcounted.zig  uv.zig  xml_scanner.zig
